feat: anonymize customer
